# RP_ROS_Alvarez_Gonzalez_Kohley_25

./: .gitignore  README.md
game_ws/: compilar  run_all  run_nodes
game_ws/src/project_game/: CMakeLists.txt  installDependencies.sh  package.xml
game_ws/src/project_game/launch/: game.launch
game_ws/src/project_game/msg/: game_state.msg
game_ws/src/project_game/scripts/: control_node.py  game_node.py  info_user.py  pygame_node.py  result_node.py
game_ws/src/project_game/srv/: SetGameDifficulty.srv
